# ceres-translate-sample

./: CMakeLists.txt  LICENSE  main.cpp
